# ConsoleChess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  starting_position.drk
.github/workflows/: cmake.yml  cmake_build.yaml  cmake_build.yml
inc/: Application.hpp
scripts/: build.bat  build.sh  run.bat  run.sh
src/: Application.cpp  Application.hpp  CMakeLists.txt  Game.hpp  Main.cpp
